tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__Tier3Manipulatin-vK1Ed8HPTTms4QxfaA_P8Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13965465878453538801,
  "prerequisites": [
    17260975369543762177
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With access to even more advanced materials, you can upgrade your QFT to tier 3 by replacing the §3Cosmic Fabric Manipulator§r casings with §3Infinity Infused Manipulator§r casings. This tier unlocks two powerful new skips: the §6final naqline skip§r and the §6stem cell skip§r.\n\nThis new casing requires even more advanced materials still, including the §3Superconductor Rare-Earth Composite§r, which can only be crafted in a tier 2 QFT. Unlike §3Hyper-Stable Self-Healing Adhesive§r, which focused on structural integrity, this composite is designed purely for energy transmission. With automatic self-repair now fully handled, we can shift our focus to increasing the energy flow between components and into the multi itself.\n\nStandard superconductors break down under quantum stress - but this composite eliminates all resistance across the outer shell. Its precisely layered rare-earth elements create such gradual transitions that quantum flow moves effortlessly, with no losses or destabilizing effects.\n\n§oWhat will you discover next?!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 3 Manipulating",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17260975369543762177
  ],
  "rewards": [],
  "tasks": []
}
