tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__Tier4Manipulatin-tXVcSBqQQnS4tF8VoMqr6Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1914102910313737193,
  "prerequisites": [
    13965465878453538801
  ],
  "properties": {
    "auto_claim": false,
    "desc": "§lFinally, you have done it§r! You can now upgrade your QFT to the ultimate tier by replacing your §3Infinity Infused Manipulator§r casings with §3SpaceTime Continuum Ripper§r casings. This final upgrade unlocks all skips, including the §6bio cell skip, the kevlar skip and the radox + xenoxene skip§r.\n\nEven with all previous upgrades, the final leap remained out of reach. Chemical skips for foundational components used in the earlier stages of the QFT, such as bioware circuits, were still impossible - §ountil now§r. Reaching the theoretical limit of the QFT demands a material far beyond anything seen before, hidden deep within the second half of the Naquadah line.\n\nThe material you require will be your magnum opus - the §3Black Body Naquadria Supersolid§r. This extraordinary substance acts as a perfect black body - absorbing all radiation without reflection - and behaves as a supersolid, flowing like a fluid with zero viscosity. Combining these properties in a single material ensures stable, effortless quantum energy flow at any voltage level, even at the MAX tier!\n\nWith this breakthrough, your QFT is fully unlocked, capable of creating components up to the UHV tier.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 4 Manipulating",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13965465878453538801
  ],
  "rewards": [],
  "tasks": []
}
