tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__Tier4Shielding-AAAAAAAAAAAAAAAAAAAM3A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3292,
  "prerequisites": [
    3291
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Consider pushing your QFT's focusing capability to its final form by replacing your §3Infinity Infused Shielding Core§r casings with §3SpaceTime Bending Core§r casings. Like the tier 4 manipulators, these also require §3Black Body Naquadria Supersolid§r.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 4 Shielding",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3291
  ],
  "rewards": [],
  "tasks": []
}
