tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__TimetoDrillforOi-AAAAAAAAAAAAAAAAAAAC_Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 765,
  "prerequisites": [
    1148
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Pumps are nice but you're going to reach a point where you'll want MOOOOOOOOOOOOORE oil. This multiblock will help with that but you'll need to search for oil using a seismic prospector. You can find raw, light, medium, and heavy oil. There's also a chance to find natural gas.\n\nHigher tiers of power will drill faster. You need to upgrade the energy hatch corresponding to the power tier.\n\nLater you can upgrade the oil drilling rig so it extracts from more than one chunk at a time.\n\nYou need mining pipes in the controller. If you need more than 64, you can use an input bus.\n\nThese are GT machines, so remember to protect them (and their power sources!) from rain on any side. And set a waypoint with JourneyMaps so you don't forget where you placed it!\n\nSpace dims can also have fluids beneath bedrock. For info, check the Tips and Tricks tab.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lTime to Drill for Oil!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1148
  ],
  "rewards": [],
  "tasks": []
}
