tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__TimetoGetSomeSte-AAAAAAAAAAAAAAAAAAAATA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 76,
  "prerequisites": [
    54
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You need steel? Uhh... fine. Let's get busy...\n\nThe Bricked Blast Furnace (BBF) can share walls with other ones, just like most GT multiblocks. How will this affect the air quality though...\n\nIf you are short on Stone Dust, you can get more by macerating cobblestone.\n\nIf you spawn near a biome with Hardened Clay you can macerate it to get the clay dust you need. You can also use brick blocks from Villages to get brick dust in the macerator.\n\nCrafting the Worktable from Forestry can make it easier as you can use all the buckets for crafting in one click.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lTime to Get Some Steel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    54
  ],
  "rewards": [],
  "tasks": []
}
