tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__TriniumCoilUpgra-AAAAAAAAAAAAAAAAAAALTQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2893,
  "prerequisites": [
    9501551098688817908,
    476
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To process more advanced materials like neutronium or fluxed electrum you need more than 8100K. Upgrade your EBF to 9001K. (OVER 9000!!!)",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lTrinium Coil Upgrade",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    9501551098688817908,
    476
  ],
  "rewards": [],
  "tasks": []
}
