tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__UEVGlass-pbLvv9tvQaKGp2Y2usPMSw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15811928983895002187,
  "prerequisites": [
    1876667058127353122
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next tier of Borosilicate glass is Cosmic Neutronium (10).",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lUEV Glass",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1876667058127353122
  ],
  "rewards": [],
  "tasks": []
}
