tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__UHVGlass-r9VceRoLQr-bpZq_EVu1Ig==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1876667058127353122,
  "prerequisites": [
    2560
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next tier of Borosilicate glass is Neutronium (9).",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lUHV Glass",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2560
  ],
  "rewards": [],
  "tasks": []
}
