tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__UIVGlass-qnXgpGxbRc-nHbshgUs1jA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7807911136506623372,
  "prerequisites": [
    15811928983895002187
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next tier of Borosilicate glass is Infinity (11).",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lUIV Glass",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15811928983895002187
  ],
  "rewards": [],
  "tasks": []
}
